patch 0.2.17: New commands for SH1106-based OLED.
Firmware has been modified to support commands for SH1106 OLED
controller.

There is also a change to send TWI commands in batch.

--- a/firmware/CMakeLists.txt
+++ b/firmware/CMakeLists.txt
@@ -27,7 +27,7 @@
 # Xling firmware build configuration.
 #
 cmake_minimum_required(VERSION 3.2)
-project(xling)
+project(Xling C)
 
 # Set common variables
 set(TARGET_OUTPUT_BASENAME "xling")
@@ -43,41 +43,99 @@ set(CMAKE_SHARED_LIBRARY_LINK_C_FLAGS)
 set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS)
 
 # Set flags
-if (CMAKE_BUILD_TYPE MATCHES Release)
-	message(STATUS "Release version will be built.")
-	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Wall -pedantic -std=iso9899:1999")
-	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Wshadow -Wpointer-arith -Wcast-qual")
-	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Wcast-align -Wstrict-prototypes")
-	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Wmissing-prototypes -Wconversion")
-	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -mmcu=${AVR_MCU} -DF_CPU=${AVR_FREQ}")
-	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -mmcu=${AVR_MCU} -DF_CPU=${AVR_FREQ}")
-	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Os")
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+	message(STATUS "Building DEBUG version of Xling firmware")
+	add_definitions("-g -DDEBUG -mmcu=${AVR_MCU} -DF_CPU=${AVR_FREQ}")
+
+	add_definitions("-std=iso9899:1999")
+	add_definitions("-Wall")
+	add_definitions("-pedantic")
+	add_definitions("-Wshadow")
+	add_definitions("-Wpointer-arith")
+	add_definitions("-Wcast-qual")
+	add_definitions("-Wcast-align")
+	add_definitions("-Wstrict-prototypes")
+	add_definitions("-Wmissing-prototypes")
+	add_definitions("-Wconversion")
+	add_definitions("-Wsign-compare")
+	add_definitions("-Wmissing-declarations")
+	add_definitions("-Wnested-externs")
+	add_definitions("-Wbad-function-cast")
+	add_definitions("-Wold-style-definition")
+	add_definitions("-Wunused")
+	add_definitions("-Wuninitialized")
+	add_definitions("-Wmissing-noreturn")
+	add_definitions("-Wmissing-format-attribute")
+	add_definitions("-Wredundant-decls")
+	#add_definitions("-Werror")
+	add_definitions("-Werror=implicit")
+	add_definitions("-Werror=nonnull")
+	add_definitions("-Werror=init-self")
+	add_definitions("-Werror=main")
+	add_definitions("-Werror=missing-braces")
+	add_definitions("-Werror=sequence-point")
+	add_definitions("-Werror=return-type")
+	add_definitions("-Werror=trigraphs")
+	add_definitions("-Werror=array-bounds")
+	add_definitions("-Werror=write-strings")
+	add_definitions("-Werror=address")
+	add_definitions("-Werror=int-to-pointer-cast")
+	add_definitions("-Werror=pointer-to-int-cast")
 else()
-	message(STATUS "Debug version will be built by default.")
-	message(STATUS "Set CMAKE_BUILD_TYPE=Release to build a release.")
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -pedantic -std=iso9899:1999")
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wshadow -Wpointer-arith -Wcast-qual")
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wcast-align -Wstrict-prototypes")
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wmissing-prototypes -Wconversion")
-	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mmcu=${AVR_MCU} -DF_CPU=${AVR_FREQ}")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mmcu=${AVR_MCU} -DF_CPU=${AVR_FREQ}")
+	message(STATUS "Building RELEASE version of Xling firmware")
+	add_definitions("-Os -mmcu=${AVR_MCU} -DF_CPU=${AVR_FREQ}")
+
+	add_definitions("-std=iso9899:1999")
+	add_definitions("-Wall")
+	add_definitions("-pedantic")
+	add_definitions("-Wshadow")
+	add_definitions("-Wpointer-arith")
+	add_definitions("-Wcast-qual")
+	add_definitions("-Wcast-align")
+	add_definitions("-Wstrict-prototypes")
+	add_definitions("-Wmissing-prototypes")
+	add_definitions("-Wconversion")
+	add_definitions("-Wsign-compare")
+	add_definitions("-Wmissing-declarations")
+	add_definitions("-Wnested-externs")
+	add_definitions("-Wbad-function-cast")
+	add_definitions("-Wold-style-definition")
+	add_definitions("-Wunused")
+	add_definitions("-Wuninitialized")
+	add_definitions("-Wmissing-noreturn")
+	add_definitions("-Wmissing-format-attribute")
+	add_definitions("-Wredundant-decls")
+	#add_definitions("-Werror")
+	add_definitions("-Werror=implicit")
+	add_definitions("-Werror=nonnull")
+	add_definitions("-Werror=init-self")
+	add_definitions("-Werror=main")
+	add_definitions("-Werror=missing-braces")
+	add_definitions("-Werror=sequence-point")
+	add_definitions("-Werror=return-type")
+	add_definitions("-Werror=trigraphs")
+	add_definitions("-Werror=array-bounds")
+	add_definitions("-Werror=write-strings")
+	add_definitions("-Werror=address")
+	add_definitions("-Werror=int-to-pointer-cast")
+	add_definitions("-Werror=pointer-to-int-cast")
 endif()
 
 # Set linker flags
-if (CMAKE_BUILD_TYPE MATCHES Release)
+if (CMAKE_BUILD_TYPE MATCHES Debug)
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mmcu=${AVR_MCU}")
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Map=${TARGET_OUTPUT_DIR}/${TARGET_OUTPUT_BASENAME}.map,--cref,--section-start=.text=0")
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s")
-	message(STATUS "(PROJECT) Linker flags: ${CMAKE_EXE_LINKER_FLAGS}")
+	message(STATUS "Linker flags: ${CMAKE_EXE_LINKER_FLAGS}")
 else()
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -mmcu=${AVR_MCU}")
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Map=${TARGET_OUTPUT_DIR}/${TARGET_OUTPUT_BASENAME}.map,--cref,--section-start=.text=0")
-	message(STATUS "(PROJECT) Linker flags: ${CMAKE_EXE_LINKER_FLAGS}")
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s")
+	message(STATUS "Linker flags: ${CMAKE_EXE_LINKER_FLAGS}")
 endif()
 
 # Find executables
 find_program(AVR_CC avr-gcc)
-find_program(AVR_CXX avr-g++)
+#find_program(AVR_CXX avr-g++)
 find_program(AVR_SIZE_TOOL avr-size)
 find_program(AVR_OBJCOPY avr-objcopy)
 find_program(AVR_OBJDUMP avr-objdump)
@@ -95,11 +153,13 @@ include_directories("../")
 include_directories("include/")
 
 # Set sources here
-set(XLING_SRC	src/xling_fuse.c
-		src/xling_main.c
-		src/xling_twibb.c
-		#src/xling_twi.c
-		src/hw/hw_ssd1309.c)
+set(XLING_SRC
+	src/fuse.c
+	src/main.c
+	src/twi/twibb.c
+	src/oled/sh1106.c
+	src/graphics/sh1106.c
+)
 
 add_executable(${TARGET_OUTPUT_FILE} ${XLING_SRC})
 add_custom_target("upload")
@@ -138,5 +198,4 @@ add_custom_command(
 
 add_custom_command(
 	TARGET "upload" POST_BUILD
-	#COMMAND ${AVR_DUDE} -p m328p -b 115200 -P /dev/pts/4 -c avrispv2 -Uflash:w:${TARGET_OUTPUT_DIR}/${TARGET_OUTPUT_BASENAME}.hex -U lfuse:w:0x6D:m)
-	COMMAND ${AVR_DUDE} -p m328p -b 115200 -P /dev/ttyU0 -c avrispv2 -Uflash:w:${TARGET_OUTPUT_DIR}/${TARGET_OUTPUT_BASENAME}.hex -U lfuse:w:0x6D:m)
+	COMMAND ${AVR_DUDE} -p m328p -b 115200 -P /dev/ttyU0 -c stk500v2 -Uflash:w:${TARGET_OUTPUT_DIR}/${TARGET_OUTPUT_BASENAME}.hex)
