--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -59,7 +59,7 @@ project(Xling-firmware C)
 # Xling-firmware version
 set(XLING_MAJOR_VERSION 0)
 set(XLING_MINOR_VERSION 4)
-set(XLING_PATCH_VERSION 16)
+set(XLING_PATCH_VERSION 17)
 
 # Target file name (without extension) and version
 set(TARGET_OUTPUT_BASENAME "Xling-firmware-${XLING_MAJOR_VERSION}.${XLING_MINOR_VERSION}.${XLING_PATCH_VERSION}")
@@ -198,20 +198,16 @@ set(XLING_SRC
 	src/rtos/heap_1.c
 	src/rtos/port.c
 	src/mcusim/drivers/avr-gcc/avr/display/sh1106/sh1106.c
-	src/mcusim/drivers/avr-gcc/avr/display/sh1106/sh1106_graphics.c
 	src/mcusim/drivers/avr-gcc/avr/display/sh1106/sh1106_spi4.c
 	src/mcusim/drivers/avr-gcc/avr/display/sh1106/sh1106_twi.c
 	src/mcusim/drivers/avr-gcc/avr/display/sh1106/sh1106_twibb.c
-	src/xling/images/exy_in_bottle_02.c
-#	src/xling/fonts/TestFont.c
-#	src/xling/fonts/TestFont2.c
-	src/xling/fonts/TestFont3.c
 	src/xling/fuse.c
 	src/xling/main.c
 	src/xling/display_task.c
 	src/xling/battery_monitor_task.c
 	src/xling/sleep_mode_task.c
 	src/xling/keyboard_task.c
+	src/xling/graphics.c
 )
 
 add_executable(${TARGET_OUTPUT_FILE} ${XLING_SRC})
