Animations and keyboard callback in Xlingtool.
Updates:

    Xlingtool, a plugin for GIMP to export scenes for Xling, can process
    several new tags from the layer names including:

        - !anim(anim_name, anim_path)
        - !stay(frames_to_stay)
        - !go(anim_path, chance_to_go)

    These tags helps to create a complex, multipath animation on a scene
    like (from common/images/scenes/smoking_02.xcf):

        !anim(RightEye, p1)_!go(p3, 98%)_!stay(4)_01
        !anim(RightEye, p1)_02
        !anim(RightEye, p1)_!stay(24)_03
        !anim(RightEye, p1)_!go(p1, 100%)_04
        !anim(RightEye, p2)_05
        !anim(RightEye, p2)_06
        !anim(RightEye, p2)_07
        !anim(RightEye, p2)_!go(p1, 100%)_08
        !anim(RightEye, p3)_!go(p2, 3%)_09

    Xlingtool supports a specific !kbd() tag also to generate a
    prototype for a function which can be used as a keyboard callback in
    a scene:

        void XG_SCNKBD_smoking_02(XG_ButtonState_e, void *);

        ...

        const XG_Scene_t XG_SCN_smoking_02 = {
        	.layers = XG_SCNL_smoking_02,
        	.layers_n = 15,
        	.kbd_cbk = XG_SCNKBD_smoking_02,
        };

    Each scene will only one XG_SCNKBD_*() callback function, but there
    might be several callbacks defined at the same time as long as scenes
    have different names:

        void XG_SCNKBD_smoking_02(XG_ButtonState_e stat, void *arg) {}
        void XG_SCNKBD_walking_01(XG_ButtonState_e stat, void *arg) {}

    See src/xling/scenes/kbd.c for other callbacks.

--- a/software/CMakeLists.txt
+++ b/software/CMakeLists.txt
@@ -59,7 +59,7 @@ project(Xling-firmware C)
 # Xling-firmware version
 set(XLING_MAJOR_VERSION 0)
 set(XLING_MINOR_VERSION 4)
-set(XLING_PATCH_VERSION 17)
+set(XLING_PATCH_VERSION 18)
 
 # Target file name (without extension) and version
 set(TARGET_OUTPUT_BASENAME "Xling-firmware-${XLING_MAJOR_VERSION}.${XLING_MINOR_VERSION}.${XLING_PATCH_VERSION}")
@@ -199,15 +199,14 @@ set(XLING_SRC
 	src/rtos/port.c
 	src/mcusim/drivers/avr-gcc/avr/display/sh1106/sh1106.c
 	src/mcusim/drivers/avr-gcc/avr/display/sh1106/sh1106_spi4.c
-	src/mcusim/drivers/avr-gcc/avr/display/sh1106/sh1106_twi.c
-	src/mcusim/drivers/avr-gcc/avr/display/sh1106/sh1106_twibb.c
 	src/xling/fuse.c
 	src/xling/main.c
-	src/xling/display_task.c
-	src/xling/battery_monitor_task.c
-	src/xling/sleep_mode_task.c
-	src/xling/keyboard_task.c
 	src/xling/graphics.c
+	src/xling/tasks/display_task.c
+	src/xling/tasks/battery_monitor_task.c
+	src/xling/tasks/sleep_mode_task.c
+	src/xling/tasks/keyboard_task.c
+	src/xling/scenes/kbd.c
 )
 
 add_executable(${TARGET_OUTPUT_FILE} ${XLING_SRC})
