Export several scenes together by Xlingtool plugin.
Problem:

	GIMP can have several images (scenes) opened, but only current
	one is exported by Xlingtool previously. It is a problem when
	several scenes have been prepared for Xling and should be
	exported together into anim.h and scenes.h files.

Solution:

	Xlingtool has been modified to process all of the currently
	open images in GIMP by applying its checks one by one. No
	context is preserved between then, but only anim.h and
	scenes.h are kept open and closed after all of the scenes exported.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 # --------------------------------------------------------------------
+# General files to ignore
+# --------------------------------------------------------------------
+GPATH
+GRTAGS
+GTAGS
+
+# --------------------------------------------------------------------
 # Emacs ignore template from:
 # https://github.com/github/gitignore/blob/master/Global/Emacs.gitignore
 # --------------------------------------------------------------------
